--- a/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.html
+++ b/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.html
@@ -36,8 +36,8 @@
                 <a class="links linkToBeDeveloped" title="Wyszukiwanie głosowe"><i class="fas fa-microphone"></i></a>
             </div>
             <div id="search-buttons">
-                <button class="mdc-button linkToBeDeveloped">Szukaj w google</button>
-                <button class="mdc-button gowno" id="lucky-luke" aria-label="Szczęśliwy traf">Szczęśliwy traf</button>
+                <button class="mdc-button mdc-button-gretszel linkToBeDeveloped">Szukaj w google</button>
+                <button class="mdc-button mdc-button-gretszel" id="lucky-luke" aria-label="Szczęśliwy traf">Szczęśliwy traf</button>
             </div>
         </div>
         <footer>
