--- a/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.html
+++ b/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.html
@@ -10,11 +10,6 @@
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
           crossorigin="anonymous" />
-    <script src="./Google_start_page_imitation.js" type="text/javascript"></script>
-    <script src="./Material-components/material-components-web.min.js" type="text/javascript"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-            crossorigin="anonymous"></script>
 </head>
     <body>
         <nav id="top-menu">
@@ -31,10 +26,11 @@
             </div>
             <div id="input-text">
                 <a class="links linkToBeDeveloped" title="Szukaj"><i class="fas fa-search"></i></a>
-                <input id="search" type="text" title="Szukaj" />
+                <input id="search" type="text" title="Szukaj" v-model="inputContent"/>
                 <a class="links linkToBeDeveloped" title="Narzędzia do wprowadzania tekstu"><i class="fas fa-keyboard"></i></a>
                 <a class="links linkToBeDeveloped" title="Wyszukiwanie głosowe"><i class="fas fa-microphone"></i></a>
             </div>
+            <p>{{inputContent}}</p>
             <div id="search-buttons">
                 <button class="mdc-button mdc-button-gretszel linkToBeDeveloped">Szukaj w google</button>
                 <button class="mdc-button mdc-button-gretszel" id="lucky-luke" aria-label="Szczęśliwy traf">Szczęśliwy traf</button>
@@ -59,5 +55,13 @@
                 </ul>
             </div>
         </footer>
+        <script src="./Data/animals.js" type="text/javascript"></script>
+        <script src="./Data/words.js" type="text/javascript"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+                crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+        <script src="./Material-components/material-components-web.min.js" type="text/javascript"></script>
+        <script src="./Google_start_page_imitation.js" type="text/javascript"></script>
     </body>
 </html>
