Autocompleter almost finished

--- a/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.html
+++ b/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.html
@@ -30,7 +30,8 @@
                 <a class="links linkToBeDeveloped" title="Narzędzia do wprowadzania tekstu"><i class="fas fa-keyboard"></i></a>
                 <a class="links linkToBeDeveloped" title="Wyszukiwanie głosowe"><i class="fas fa-microphone"></i></a>
             </div>
-            <div-autocompleter v-bind:inputcontent="inputContent" v-bind:animalnames="animalNames"></div-autocompleter>
+            <div-autocompleter v-bind:inputcontent="inputContent" v-bind:animalnames="animalNames">
+            </div-autocompleter>
             <div id="search-buttons">
                 <button class="mdc-button mdc-button-gretszel linkToBeDeveloped">Szukaj w google</button>
                 <button class="mdc-button mdc-button-gretszel" id="lucky-luke" aria-label="Szczęśliwy traf">Szczęśliwy traf</button>
