--- a/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.html
+++ b/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.html
@@ -11,70 +11,73 @@
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
           crossorigin="anonymous" />
 </head>
-    <body>
-        <nav id="top-menu">
-            <ul class="nav-bar">
-                <li><a href="https://mail.google.com/mail" class="links">Gmail</a></li>
-                <li><a class="links linkToBeDeveloped">Grafika</a></li>
-                <li class="middle-icon"><a class="links linkToBeDeveloped"><i class="fas fa-th" title="Aplikacje Google"></i></a></li>
-                <li class="middle-icon"><a class="links linkToBeDeveloped"><img id="my-face" alt="Konto" src="./Img/photo.jpg" title="Konto Google: Piotr Gretszel&#013;(piotr.gretszel@gmail.com)"/></a></li>
-            </ul>
-        </nav>
-        <div id="main-container">
-            <div>
-                <img id="google-logo" alt="Google" src="./Img/google_logo.png" height="92"  width="272" />
-            </div>
-            <div id="app">
-                <autocomplete :items="window.animals" />
-            </div>
-            <script type="text/x-template" id="autocomplete">
-                <div class="autocomplete">
-                    <div id="input-text">
-                        <a class="links linkToBeDeveloped" title="Szukaj"><i class="fas fa-search"></i></a>
-                        <input type="text" id="search" title="Szukaj" v-model="search" @input="onChange" @keyup.down="onArrowDown"
-                               @keyup.up="onArrowUp" @keyup.enter="onEnter" />
-                        <a class="links linkToBeDeveloped" title="Narzędzia do wprowadzania tekstu"><i class="fas fa-keyboard"></i></a>
-                        <a class="links linkToBeDeveloped" title="Wyszukiwanie głosowe"><i class="fas fa-microphone"></i></a>
-                    </div>
-                    <ul id="autocomplete-results" v-show="isOpen" class="autocomplete-results">
-                        <li class="loading" v-if="isLoading">
-                            Loading results...
-                        </li>
-                        <li v-else v-for="(result, i) in results" :key="i" @click="setResult(result)" class="autocomplete-result"
-                            :class="{ 'is-active': i === arrowCounter }">
-                            {{ result }}
-                        </li>
-                    </ul>
-                </div>
-            </script>
-            <div id="search-buttons">
-                <button class="mdc-button mdc-button-gretszel linkToBeDeveloped">Szukaj w google</button>
-                <button class="mdc-button mdc-button-gretszel" id="lucky-luke" aria-label="Szczęśliwy traf">Szczęśliwy traf</button>
-            </div>
+<body>
+    <nav id="top-menu">
+        <ul class="nav-bar">
+            <li><a href="https://mail.google.com/mail" class="links">Gmail</a></li>
+            <li><a class="links linkToBeDeveloped">Grafika</a></li>
+            <li class="middle-icon"><a class="links linkToBeDeveloped"><i class="fas fa-th" title="Aplikacje Google"></i></a></li>
+            <li class="middle-icon"><a class="links linkToBeDeveloped"><img id="my-face" alt="Konto" src="./Img/photo.jpg" title="Konto Google: Piotr Gretszel&#013;(piotr.gretszel@gmail.com)" /></a></li>
+        </ul>
+    </nav>
+    <div id="main-container">
+        <div>
+            <img id="google-logo" alt="Google" src="./Img/google_logo.png" height="92" width="272" />
         </div>
-        <footer>
-            <div id="footer-top">
-                <ul>
-                    <li>Polska</li>
+        <div id="app">
+            <autocomplete :items="window.animals" />
+        </div>
+        <script type="text/x-template" id="autocomplete">
+            <div class="autocomplete">
+                <div id="input-text">
+                    <a class="links linkToBeDeveloped" title="Szukaj"><i class="fas fa-search"></i></a>
+                    <input type="text" id="search" title="Szukaj" v-model="search" @input="onChange" @keyup.down="onArrowDown"
+                           @keyup.up="onArrowUp" @keyup.enter="onEnter" />
+                    <a class="links linkToBeDeveloped" title="Narzędzia do wprowadzania tekstu"><i class="fas fa-keyboard"></i></a>
+                    <a class="links linkToBeDeveloped" title="Wyszukiwanie głosowe"><i class="fas fa-microphone"></i></a>
+                </div>
+                <ul id="autocomplete-results" v-show="isOpen" class="autocomplete-results">
+                    <li class="loading" v-if="isLoading">
+                        Loading results...
+                    </li>
+                    <li v-else v-for="(result, i) in results" :key="i" @click="setResult(result)" class="autocomplete-result"
+                        :class="{ 'is-active': i === arrowCounter }">
+                        {{ result }}
+                    </li>
                 </ul>
             </div>
-            <div id="footer-bottom">
-                <ul>
-                    <li><a href="https://ads.google.com/intl/pl_PL/home/" class="links" >Reklamuj się</a></li>
-                    <li><a href="https://www.google.com/services/#?modal_active=none" class="links" >Dla firm</a></li>
-                    <li><a href="https://about.google/intl/pl_pl/" class="links">O nas</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://policies.google.com/privacy?hl=pl&gl=pl" class="links">Prywatność</a></li>
-                    <li><a href="https://policies.google.com/terms?hl=pl&gl=pl" class="links">Warunki</a></li>
-                    <li><a href="https://www.google.com/preferences?hl=pl" class="links">Ustawienia</a></li>
-                </ul>
-            </div>
-        </footer>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-                crossorigin="anonymous"></script>
-        <script src="./Material-components/material-components-web.min.js" type="text/javascript"></script>
-        <script src="./Google_start_page_imitation.js" type="text/javascript"></script>
-    </body>
+        </script>
+        <div id="search-buttons">
+            <button class="mdc-button mdc-button-gretszel linkToBeDeveloped">Szukaj w google</button>
+            <button class="mdc-button mdc-button-gretszel" id="lucky-luke" aria-label="Szczęśliwy traf">Szczęśliwy traf</button>
+        </div>
+    </div>
+    <footer>
+        <div id="footer-top">
+            <ul>
+                <li>Polska</li>
+            </ul>
+        </div>
+        <div id="footer-bottom">
+            <ul>
+                <li><a href="https://ads.google.com/intl/pl_PL/home/" class="links">Reklamuj się</a></li>
+                <li><a href="https://www.google.com/services/#?modal_active=none" class="links">Dla firm</a></li>
+                <li><a href="https://about.google/intl/pl_pl/" class="links">O nas</a></li>
+            </ul>
+            <ul>
+                <li><a href="https://policies.google.com/privacy?hl=pl&gl=pl" class="links">Prywatność</a></li>
+                <li><a href="https://policies.google.com/terms?hl=pl&gl=pl" class="links">Warunki</a></li>
+                <li><a href="https://www.google.com/preferences?hl=pl" class="links">Ustawienia</a></li>
+            </ul>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="./Data/animals.js" type="text/javascript"></script>
+    <script src="./Data/words.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+    <script src="./Material-components/material-components-web.min.js" type="text/javascript"></script>
+    <script src="./Google_start_page_imitation.js" type="text/javascript"></script>
+</body>
 </html>
