Top bar working

--- a/Google_page_imitation_Piotr_Gretszel/Google_results_page.html
+++ b/Google_page_imitation_Piotr_Gretszel/Google_results_page.html
@@ -41,13 +41,17 @@
         </script>
     </div>
     <div id="sticky-end">
-        <li class="middle-icon"><a class="links linkToBeDeveloped"><i class="fas fa-th" title="Aplikacje Google"></i></a></li>
-        <li class="middle-icon"><a class="links linkToBeDeveloped"><img id="my-face" alt="Konto" src="./Img/photo.jpg" title="Konto Google: Piotr Gretszel&#013;(piotr.gretszel@gmail.com)" /></a></li>
+        <ul class="nav-bar">
+            <li class="middle-icon"><a class="links linkToBeDeveloped"><i class="fas fa-th" title="Aplikacje Google"></i></a></li>
+            <li class="middle-icon"><a class="links linkToBeDeveloped"><img id="my-face" alt="Konto" src="./Img/photo.jpg" title="Konto Google: Piotr Gretszel&#013;(piotr.gretszel@gmail.com)"/></a></li>
+        </ul>
     </div>
 </div>
     <nav id="top-menu">
-        <ul class="nav-bar">
-            <li>Wszystko</li>
+        <ul class="categories-bar nav-bar">
+            <div class="category-active">
+                <li>Wszystko</li>
+            </div>
             <li>Wiadomości</li>
             <li>Grafika</li>
             <li>Zakupy</li>
@@ -58,7 +62,6 @@
         </ul>
     </nav>
     <div id="main-container">
-
     </div>
     <footer>
         <div id="footer-top">
