--- a/Google_page_imitation_Piotr_Gretszel/Google_results_page.html
+++ b/Google_page_imitation_Piotr_Gretszel/Google_results_page.html
@@ -13,115 +13,114 @@
     <link href="./shared.css" rel="stylesheet" />
 </head>
 <body>
-    <div id="sticky">
-        <div id="sticky-front">
-            <img id="google-logo" onclick="goToMainPage();" alt="Przejdź do strony głównej Google" src="./Img/google_logo.png" height="30" width="92" title="Przejdź do strony głównej Google" />
-            <div id="app">
-                <autocomplete :items="window.animals" />
-            </div>
-            <script type="text/x-template" id="autocomplete">
-                <div class="autocomplete">
-                    <div id="input-text">
-                        <input type="text" id="search" title="Szukaj" v-model="search" @input="onChange" @keyup.down="onArrowDown"
-                               @keyup.up="onArrowUp" @keyup.enter="onEnter" />
-                        <a class="links linkToBeDeveloped" title="Narzędzia do wprowadzania tekstu"><i class="fas fa-keyboard"></i></a>
-                        <a class="links linkToBeDeveloped" title="Wyszukiwanie głosowe"><i class="fas fa-microphone"></i></a>
-                        <a class="links searchButton" title="Szukaj"><i class="fas fa-search"></i></a>
-                    </div>
-                    <ul id="autocomplete-results" v-show="isOpen" class="autocomplete-results">
-                        <li class="loading" v-if="isLoading">
-                            Loading results...
-                        </li>
-                        <li v-else v-for="(result, i) in results" :key="i" @click="setResult(result)" class="autocomplete-result"
-                            :class="{ 'is-active': i === arrowCounter }">
-                            {{ result }}
-                        </li>
-                    </ul>
+
+    <div id="bodyContainer">
+        <div id="sticky">
+            <div id="sticky-front">
+                <img id="google-logo" onclick="goToMainPage();" alt="Przejdź do strony głównej Google" src="./Img/google_logo.png" height="30" width="92" title="Przejdź do strony głównej Google" />
+                <div id="app">
+                    <autocomplete :items="window.animals" />
                 </div>
-            </script>
-        </div>
-        <div id="sticky-end">
-            <ul class="nav-bar">
-                <li class="middle-icon"><a class="links linkToBeDeveloped"><i class="fas fa-th" title="Aplikacje Google"></i></a></li>
-                <li class="middle-icon"><a class="links linkToBeDeveloped"><img id="my-face" alt="Konto" src="./Img/photo.jpg" title="Konto Google: Piotr Gretszel&#013;(piotr.gretszel@gmail.com)" /></a></li>
-            </ul>
-        </div>
-    </div>
-    <nav id="top-menu">
-        <ul class="categories-bar nav-bar">
-            <li class="category-active links">
-                <span>Wszystko</span>
-            </li>
-            <li class="category-inactive links">
-                <span>Wiadomości</span>
-            </li>
-            <li class="category-inactive links">
-                <span>Grafika</span>
-            </li>
-            <li class="category-inactive links">
-                <span>Zakupy</span>
-            </li>
-            <li class="category-inactive links">
-                <span>Filmy</span>
-            </li>
-            <li class="category-inactive links">
-                <span>Więcej</span>
-            </li>
-            <li class="category-inactive links">
-                <span>Ustawienia</span>
-            </li>
-            <li class="category-inactive links">
-                <span id="toolsButton" class="linkToBeDeveloped">Narzędzia</span>
-            </li>
-        </ul>
-    </nav>
-    <div id="main-container">
-        <div class="results-counter">
-            <span>Około 242 000 000 wyników (0,35 s)</span>
-        </div>
-        <div class="search-results">
-            <div class="search-result">
-                <ul>
-                    <li class="links-results links-results-big linkToBeDeveloped">Scacciarla sospettoso trascinato uno cambieremo ape incontrato era cancellato</li>
-                    <li>https://www.sconvoltoriconosco.com/pl-pl/ <span class="linkToBeDeveloped">&#9662;</span></li>
-                    <li>Incontrato pensieroso ti tu la ingannaste. Osi intere riluce lancio rimase sfonda hai dal. Mia scarabei chiedete che duchessa verranno. Uscendo vacilla passato su lo ed divieto cintura. Veda re orti le viva ebro da su. Chiedete crediate orgoglio ora sul due sofferto. Moglie scorso un subito ad.</li>
-                    <li><span class="links-results links-results-small linkToBeDeveloped">link1</span><span>&middot;</span><span class="links-results links-results-small linkToBeDeveloped">link2</span><span>&middot;</span><span class="links-results links-results-small linkToBeDeveloped">link3</span><span>&middot;</span><span class="links-results links-results-small linkToBeDeveloped">link4</span></li>
-                </ul>
+                <script type="text/x-template" id="autocomplete">
+                    <div class="autocomplete">
+                        <div id="input-text">
+                            <input type="text" id="search" title="Szukaj" v-model="search" @input="onChange" @keyup.down="onArrowDown"
+                                   @keyup.up="onArrowUp" @keyup.enter="onEnter" />
+                            <a class="links linkToBeDeveloped" title="Narzędzia do wprowadzania tekstu"><i class="fas fa-keyboard"></i></a>
+                            <a class="links linkToBeDeveloped" title="Wyszukiwanie głosowe"><i class="fas fa-microphone"></i></a>
+                            <a class="links searchButton" title="Szukaj"><i class="fas fa-search"></i></a>
+                        </div>
+                        <ul id="autocomplete-results" v-show="isOpen" class="autocomplete-results">
+                            <li class="loading" v-if="isLoading">
+                                Loading results...
+                            </li>
+                            <li v-else v-for="(result, i) in results" :key="i" @click="setResult(result)" class="autocomplete-result"
+                                :class="{ 'is-active': i === arrowCounter }">
+                                {{ result }}
+                            </li>
+                        </ul>
+                    </div>
+                </script>
             </div>
-            <div class="search-result">
-                <ul>
-                    <li class="links-results links-results-big linkToBeDeveloped">Scacciarla sospettoso trascinato uno cambieremo ape incontrato era cancellato</li>
-                    <li>https://www.sconvoltoriconosco.com/pl-pl/ <span class="linkToBeDeveloped">&#9662;</span></li>
-                    <li>Incontrato pensieroso ti tu la ingannaste. Osi intere riluce lancio rimase sfonda hai dal. Mia scarabei chiedete che duchessa verranno. Uscendo vacilla passato su lo ed divieto cintura. Veda re orti le viva ebro da su. Chiedete crediate orgoglio ora sul due sofferto. Moglie scorso un subito ad.</li>
-                    <li><span class="links-results links-results-small linkToBeDeveloped">link1</span><span>&middot;</span><span class="links-results links-results-small linkToBeDeveloped">link2</span><span>&middot;</span><span class="links-results links-results-small linkToBeDeveloped">link3</span><span>&middot;</span><span class="links-results links-results-small linkToBeDeveloped">link4</span></li>
+            <div id="sticky-end">
+                <ul class="nav-bar">
+                    <li class="middle-icon"><a class="links linkToBeDeveloped"><i class="fas fa-th" title="Aplikacje Google"></i></a></li>
+                    <li class="middle-icon"><a class="links linkToBeDeveloped"><img id="my-face" alt="Konto" src="./Img/photo.jpg" title="Konto Google: Piotr Gretszel&#013;(piotr.gretszel@gmail.com)" /></a></li>
                 </ul>
             </div>
         </div>
-    </div>
-    <footer>
-        <div id="footer-top">
-            <span>Polska</span>
-            <div id="footer-bottom-top-right" class="footer-bottom-text">
-                <span><i class="fas fa-circle" style="font-size: 70%;">&nbsp;</i></span>
-                <span class="text-bold">Prądnik Biały, Kraków</span>
-                <span class="text-black">&nbsp;-&nbsp;</span>
-                <span> Z Twojej historii wyszukiwania</span>
-                <span class="text-black">&nbsp;-&nbsp;</span>
-                <a class="links linkToBeDeveloped">Użyj dokładnej lokalizacji</a>
-                <span class="text-black">&nbsp;-&nbsp;</span>
-                <a class="links" href="https://support.google.com/websearch/answer/179386?p=ws_settings_location&hl=pl&visit_id=636898336336039936-1433983238&rd=1"> Dowiedz się więcej </a>
+        <div id="routerApp">
+            <nav id="top-menu">
+                <ul class="categories-bar nav-bar">
+                    <li id="wszystko" class="category-inactive links">
+                        <span><router-link to="/wszystko">Wszystko</router-link></span>
+                    </li>
+                    <li id="wiadomosci" class="category-inactive links">
+                        <span><router-link to="/wiadomosci">Wiadomości</router-link></span>
+                    </li>
+                    <li id="grafika" class="category-inactive links">
+                        <span><router-link to="/grafika">Grafika</router-link></span>
+                    </li>
+                    <li id="zakupy" class="category-inactive links">
+                        <span><router-link to="/zakupy">Zakupy</router-link></span>
+                    </li>
+                    <li id="filmy" class="category-inactive links">
+                        <span><router-link to="/filmy">Filmy</router-link></span>
+                    </li>
+                    <li id="wiecej" class="category-inactive links">
+                        <span><router-link to="/wiecej">Więcej</router-link></span>
+                    </li>
+                    <li id="ustawienia" class="category-inactive links">
+                        <span><router-link to="/ustawienia">Ustawienia</router-link></span>
+                    </li>
+                    <li class="category-inactive links">
+                        <span id="toolsButton" class="linkToBeDeveloped">Narzędzia</span>
+                    </li>
+                </ul>
+            </nav>
+            <div id="main-container">
+                <div class="results-counter">
+                    <span>Około 242 000 000 wyników (0,35 s)</span>
+                </div>
+                <div class="search-results">
+                    <div class="search-result">
+                        <router-view></router-view>
+                    </div>
+                    <div class="search-result">
+                        <router-view></router-view>
+                    </div>
+                </div>
             </div>
         </div>
-        <div id="footer-bottom">
-            <ul class="footer-bottom-text">
-                <li><a href="https://support.google.com/websearch/?visit_id=636898336336039936-1433983238&hl=pl&rd=2#topic=3378866" class="links">Pomoc</a></li>
-                <li><a class="links linkToBeDeveloped">Prześlij opinię</a></li>
-                <li><a href="https://policies.google.com/privacy?hl=pl&gl=pl" class="links">Prywatność</a></li>
-                <li><a href="https://policies.google.com/terms?hl=pl&gl=pl" class="links">Warunki</a></li>
-            </ul>
-        </div>
-    </footer>
+
+        <footer>
+            <div id="footer-top">
+                <span>Polska</span>
+                <div id="footer-bottom-top-right" class="footer-bottom-text">
+                    <span><i class="fas fa-circle" style="font-size: 70%;">&nbsp;</i></span>
+                    <span class="text-bold">Prądnik Biały, Kraków</span>
+                    <span class="text-black">&nbsp;-&nbsp;</span>
+                    <span> Z Twojej historii wyszukiwania</span>
+                    <span class="text-black">&nbsp;-&nbsp;</span>
+                    <a class="links linkToBeDeveloped">Użyj dokładnej lokalizacji</a>
+                    <span class="text-black">&nbsp;-&nbsp;</span>
+                    <a class="links" href="https://support.google.com/websearch/answer/179386?p=ws_settings_location&hl=pl&visit_id=636898336336039936-1433983238&rd=1"> Dowiedz się więcej </a>
+                </div>
+            </div>
+            <div id="footer-bottom">
+                <ul class="footer-bottom-text">
+                    <li><a href="https://support.google.com/websearch/?visit_id=636898336336039936-1433983238&hl=pl&rd=2#topic=3378866" class="links">Pomoc</a></li>
+                    <li><a class="links linkToBeDeveloped">Prześlij opinię</a></li>
+                    <li><a href="https://policies.google.com/privacy?hl=pl&gl=pl" class="links">Prywatność</a></li>
+                    <li><a href="https://policies.google.com/terms?hl=pl&gl=pl" class="links">Warunki</a></li>
+                </ul>
+            </div>
+        </footer>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+    <script src="google_results_router.js"></script>
     <script src="./Data/animals.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
