--- a/Lectures_workshops/Default.html
+++ b/Lectures_workshops/Default.html
@@ -7,22 +7,22 @@
     </head>
     <body>
         <div id="ex1">
-            <h2>Excercise 1</h2>
+            <h2>Exercise 1</h2>
             <span>What is your year of birth? </span><input id="ex1inp" type="number" min="1900" max="2019" /><button type="submit" id="ex1but" onclick="getAge()">Get age</button>
             <br />
             <span>You are </span><span id="ex1res">0</span><span> years old!</span>
         </div>
         <div id="ex2">
-            <h2>Excercise 2</h2>
+            <h2>Exercise 2</h2>
             <span>What is your date of birth? </span><input id="ex2inp" type="date" /><button type="submit" id="ex2but" onclick="getAgeAdvanced()">Get age</button>
             <br />
             <span>You are </span><span id="ex2res">0</span><span> years old!</span>
         </div>
         <div id="ex3">
-            <h2>Excercise 3</h2>
+            <h2>Exercise 3</h2>
             <ul id="ex3lis"></ul>
             <br />
         </div>
-        <script src="./Default.js" type="text/javascript"></script>
+        <script src="Default.js" type="text/javascript"></script>
     </body>
 </html>
